--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://lugera.jobs/job/frontend-developer-21667/?utm_source=&utm_medium='>Frontend Developer - Pracovn? ponuky v Lugere</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/sentinelone/job/oVwrbfwN'>SentinelOne Careers - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv-Yafo Tel Aviv-Yafo</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -50,11 +54,11 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -120,7 +124,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +159,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 architecture and functionality decisions. Whether you prefer providing mentorship 
 to?...</p>
 <hr/>
-<h5><a href='https://opensignal-limited.workable.com/jobs/1155891/candidates/new'>Frontend Engineer - Opensignal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opensignal-limited.workable.com/jobs/1155891/candidates/new'>Frontend Engineer - Opensignal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Who are Opensignal?Opensignal, a mobile analytics company, is the global 
 standard for measuring real-world mobile network experience. Using billions of?...</p>
@@ -226,11 +230,11 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/blueliv/dccb46cd-9cd7-41be-b8fa-2b87e24b5a3d'>Blueliv - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blueliv/dccb46cd-9cd7-41be-b8fa-2b87e24b5a3d'>Blueliv - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -254,7 +258,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -316,7 +320,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/q4inc/3c161680-68d3-4713-a718-7d291ac501d4'>Q4 - Intermediate Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/q4inc/3c161680-68d3-4713-a718-7d291ac501d4'>Q4 - Intermediate Front End Developer</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -328,7 +332,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/copper/d3aabfb0-fa16-428d-a994-fa8965978809'>Copper CRM - Front End Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/copper/d3aabfb0-fa16-428d-a994-fa8965978809'>Copper CRM - Front End Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -386,7 +390,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chimpy.join.com/jobs/456657-front-end-engineer-who-loves-ux-ui-react-react-native-js'>Job @ Chimpy (Z?rich): Front-end engineer who love... | JOIN</a></h5> 
+<h5><a href='https://chimpy.join.com/jobs/456657-front-end-engineer-who-loves-ux-ui-react-react-native-js'>Job @ Chimpy (Z?rich): Front-end engineer who love... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -399,7 +403,7 @@ work hard on innovation for the insurance industry with the newest technology?..
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/react/jobs/8416-frontend-engineer-m-f-d'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8416-frontend-engineer-m-f-d'>
 Frontend Engineer (m/f/d) at XAIN AG in Berlin | React jobs | 42jobs.io
 
 </a></h5> 
@@ -424,7 +428,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584431'>Stellenangebot: Frontend Developer (w/m/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584431'>Stellenangebot: Frontend Developer (w/m/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -456,12 +460,8 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242088-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242088-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243433-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
