--- a/product-manager.html
+++ b/product-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/thefork/jobs/1937495'>Job Application for Lead Product Designer H/F at The Fork</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/thefork/jobs/1937495'>Job Application for Lead Product Designer H/F at The Fork</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SFL/743999698444266-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://producthire.net/job/product-manager-trust-safety/'>Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET</a></h5> 
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/americanproducts/job/oONpbfwV'>American Products Careers - Product Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/americanproducts/job/oONpbfwV'>American Products Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -94,7 +98,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/horangi/d8944db6-6004-4e9b-9883-04d18afd129f'>Horangi - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/horangi/d8944db6-6004-4e9b-9883-04d18afd129f'>Horangi - Product Manager</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -178,7 +182,7 @@
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -210,7 +214,7 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warren, MI</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -230,13 +234,13 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
+<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
       Product Manager - Oyster Financial Inc 
     </a></h5> 
 <p><span class="badge badge-light">Mexico Mexico</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -339,7 +343,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://hetzner.recruitee.com/o/product-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hetzner.recruitee.com/o/product-manager'>
       Product Manager - xneelo
     </a></h5> 
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
@@ -411,7 +415,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://fincite.join.com/jobs/459680-product-owner-cios-connect-m-w-d'>Job @ Fincite (Frankfurt am Main): Product Owner -... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fincite.join.com/jobs/459680-product-owner-cios-connect-m-w-d'>Job @ Fincite (Frankfurt am Main): Product Owner -... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -439,7 +443,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
 <p><span class="badge badge-light">Denver  Denver Denver Denver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -450,10 +454,6 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <h5><a href='https://boards.greenhouse.io/prowlerio/jobs/4486296002'>Job Application for Senior UX /  Product Designer at PROWLER.io</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://fastpay.applytojob.com/apply/mUJT2jHPFu/Senior-Product-Manager'>Senior Product Manager - FastPay - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 14, 2019 ... Apply to Senior Product Manager at FastPay in Framingham, MA.</p>
 <hr/>
 
 
